# rdt-dx

./: .gitattributes  .gitignore  README.md  pyproject.toml  requirements.txt
configs/: rdt_config.yaml
docs/: PRELIMINARY_REPORT.md  RELATED_WORK_REPORT.md  VERIFICATION_PLAN.md  design-direction-a-neural-evidence-accumulation.md  technical-prototype-rdt-medical-llm.md
experiments/: phase_a_verify.py  phase_b_bridge_ablation.py  phase_c_k_ablation.py
src/: __init__.py  aggregation.py  bridge.py  data_utils.py  eval_utils.py  rdt_fixed.py  train_bridge_warmup.py  train_rdt_fixed.py
tests/: __init__.py  test_kv_cache.py  test_smoke.py
