[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "rdt-dx"
version = "0.1.0"
description = "RDT-Dx: Recursive Depth Transformer for Medical LLM"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "transformers>=4.45.0",
    "accelerate",
    "tensorboard",
    "pyyaml",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black",
    "ruff",
]

[tool.setuptools]
packages = ["src"]
